--- a/chat/src/main/res/layout/activity_comment_list.xml
+++ b/chat/src/main/res/layout/activity_comment_list.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/ll_activity_comment_list_container"
+    android:orientation="vertical">
 
     <com.example.commonlibrary.customview.swipe.CustomSwipeRefreshLayout
         android:id="@+id/refresh_activity_comment_list_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <com.example.commonlibrary.baseadapter.SuperRecyclerView
             android:id="@+id/srcv_activity_comment_list_display"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:layout_height="match_parent" />
     </com.example.commonlibrary.customview.swipe.CustomSwipeRefreshLayout>
 
     <include
         layout="@layout/view_activity_comment_list_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:layout_behavior="@string/behavior_footer" />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        android:layout_gravity="bottom" />
+</LinearLayout>
