--- a/chat/src/main/res/layout/item_activity_chat_receive.xml
+++ b/chat/src/main/res/layout/item_activity_chat_receive.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_item_activity_chat_receive_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/grey_500"
+        android:textColor="@color/white"
         android:textSize="12sp"/>
 
     <RelativeLayout
