--- a/music/src/main/res/drawable/ic_skip_previous_black.xml
+++ b/music/src/main/res/drawable/ic_skip_previous_black.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="#707070"
         android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z" />
 </vector>
