--- a/music/src/main/res/layout/view_fragment_holder_header_view.xml
+++ b/music/src/main/res/layout/view_fragment_holder_header_view.xml
@@ -18,7 +18,7 @@
         android:id="@+id/vpi_view_fragment_holder_header_view_indicator"
         android:layout_width="210dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="60dp"
         android:gravity="center_vertical"
         app:tabNormalColor="@color/white"
         app:tabSelectedColor="@color/orange_500"
@@ -26,8 +26,8 @@
 
     <ImageView
         android:id="@+id/iv_view_Fragment_holder_header_view_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_search" />
