--- a/chat/src/main/res/layout/activity_chat.xml
+++ b/chat/src/main/res/layout/activity_chat.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:id="@+id/ll_activity_chat_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0.0dp"
@@ -11,11 +13,12 @@
         <com.example.commonlibrary.customview.swipe.CustomSwipeRefreshLayout
             android:id="@+id/swl_chat_refresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
+
             <com.example.commonlibrary.baseadapter.SuperRecyclerView
                 android:id="@+id/srcv_chat_display"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             </com.example.commonlibrary.baseadapter.SuperRecyclerView>
 
@@ -29,13 +32,15 @@
             android:background="@color/grey_500"
             android:padding="10dp"
             android:visibility="invisible">
+
             <ImageView
                 android:id="@+id/iv_chat_middle_voice_display"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/chat_icon_voice1"/>
+                android:src="@mipmap/chat_icon_voice1" />
+
             <TextView
                 android:id="@+id/tv_chat_middle_voice_tip"
                 android:layout_width="100dp"
@@ -46,8 +51,9 @@
                 android:gravity="center"
                 android:text="@string/chat_middle_voice_tip"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
         </RelativeLayout>
     </RelativeLayout>
-    <include layout="@layout/include_chat_bottom_bar"/>
+
+    <include layout="@layout/include_chat_bottom_bar" />
 </LinearLayout>
