--- a/chat/src/main/res/layout/activity_user_info.xml
+++ b/chat/src/main/res/layout/activity_user_info.xml
@@ -43,8 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="姓名"
-        android:textColor="@color/base_color_text_blue"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/riv_user_info_avatar"
         app:layout_constraintStart_toStartOf="@+id/riv_user_info_avatar"
         app:layout_constraintTop_toBottomOf="@+id/riv_user_info_avatar" />
@@ -70,9 +69,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="帐号"
-        android:textColor="@color/base_color_text_blue"
-        android:textSize="20sp"
+        android:textColor="@color/blue_500"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -139,6 +137,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="签名"
+        android:textColor="@color/blue_500"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/riv_user_info_avatar"
         app:layout_constraintStart_toStartOf="@+id/riv_user_info_avatar"
         app:layout_constraintTop_toBottomOf="@+id/tv_user_info_name" />
