--- a/chat/src/main/res/layout/item_activity_chat_receive_text.xml
+++ b/chat/src/main/res/layout/item_activity_chat_receive_text.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:id="@+id/tv_item_activity_chat_receive_text"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv_item_activity_chat_receive_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_centerVertical="true"
-    android:gravity="center"
-    android:lineSpacingExtra="6dp"
+    android:lineSpacingExtra="2dp"
     android:maxWidth="225dp"
-    android:minHeight="50dp"
     android:minWidth="50dp"
-    android:text="xvcb xcv xxc"
-    android:textColor="@color/base_color_text_black"
-    android:textSize="16sp"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:minHeight="50dp"
+    android:textColor="@color/white"
+    android:textSize="14sp" />
