--- a/chat/src/main/res/layout/item_activity_chat_send_video.xml
+++ b/chat/src/main/res/layout/item_activity_chat_send_video.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
     <com.example.commonlibrary.manager.video.DefaultVideoPlayer
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:id="@+id/dvp_item_activity_chat_send_video"/>
+        android:id="@+id/dvp_item_activity_chat_send_video"
+        android:layout_width="230dp"
+        android:layout_height="150dp" />
 </FrameLayout>
