--- a/chat/src/main/res/layout/item_activity_chat_send_voice.xml
+++ b/chat/src/main/res/layout/item_activity_chat_send_voice.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv_item_activity_chat_send_voice_volume"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_alignParentTop="true"
-android:minHeight="50dp"
-android:minWidth="80dp"
-android:scaleType="fitCenter"
-android:src="@drawable/ic_chat_voice_right_3"
-xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:layout_alignParentTop="true"
+    android:scaleType="fitCenter"
+    android:src="@drawable/ic_chat_voice_right_3" />
