--- a/music/src/main/res/layout/item_fragment_album_list.xml
+++ b/music/src/main/res/layout/item_fragment_album_list.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/iv_item_fragment_album_list_image"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="150dp"
         android:background="@drawable/custom_drawable_place_holder"
         android:scaleType="centerCrop" />
 
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <TextView
@@ -25,10 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="2" />
+            android:maxLines="1" />
 
         <TextView
-
             android:id="@+id/tv_item_fragment_album_list_sub_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
