--- a/app/src/main/res/layout/activity_splash_main.xml
+++ b/app/src/main/res/layout/activity_splash_main.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@mipmap/de_bg">
 
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/login_container_bg_02" />
-
-    <TextView
+    <com.example.commonlibrary.customview.GradientTextView
         android:id="@+id/tv_activity_splash_main_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:textColor="@color/white"
-        android:textSize="26sp" />
+        android:layout_marginTop="100dp"
+        android:text="简     倾"
+        android:textColor="@color/blue_500"
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/tv_activity_splash_main_time"
@@ -25,6 +21,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginTop="20dp"
         android:layout_marginRight="5dp"
+        android:background="@drawable/custom_drawable_circle_splash_bg"
+        android:gravity="center"
         android:text="3"
         android:textColor="@color/white"
         android:textSize="18sp" />
