--- a/music/src/main/res/layout/activity_lock_screen.xml
+++ b/music/src/main/res/layout/activity_lock_screen.xml
@@ -2,12 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rl_activity_lock_screen_container"
     android:background="@drawable/login_bg_night">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#70000000" />
+
 
     <TextView
         android:id="@+id/tv_activity_lock_screen_time"
@@ -94,7 +92,7 @@
         android:layout_marginBottom="30dp"
         android:textColor="@color/white" />
 
-    <com.example.cootek.newfastframe.view.GradientTextView
+    <com.example.commonlibrary.customview.GradientTextView
         android:id="@+id/temp"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
