--- a/music/src/main/res/layout/fragment_song_detail.xml
+++ b/music/src/main/res/layout/fragment_song_detail.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tl_fragment_song_detail_tab"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:id="@+id/tl_fragment_song_detail_tab"/>
+        app:tabSelectedTextColor="@color/orange_500"
+        app:tabTextColor="@color/white" />
 
     <com.example.commonlibrary.customview.WrappedViewPager
+        android:id="@+id/wvp_fragment_song_detail_display"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/wvp_fragment_song_detail_display"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
