--- a/chat/src/main/res/layout/fragment_person.xml
+++ b/chat/src/main/res/layout/fragment_person.xml
@@ -1,245 +1,280 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.commonlibrary.customview.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:skin="http://schemas.android.com/android/skin"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/custom_color_app_bg"
-    android:orientation="vertical"
-    skin:enable="true">
+    android:layout_height="wrap_content">
 
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="match_parent"
+        android:background="@color/custom_color_app_bg"
+        android:orientation="vertical"
+        skin:enable="true">
 
 
-        <ImageView
-            android:id="@+id/iv_fragment_person_title_bg"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/custom_drawable_place_holder" />
+            android:layout_height="200dp">
 
-        <com.example.commonlibrary.customview.RoundAngleImageView
-            android:id="@+id/riv_fragment_person_avatar"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_centerInParent="true"
-            android:background="@drawable/custom_drawable_place_holder"
-            android:scaleType="centerCrop"
-            app:roundHeight="30dp"
-            app:roundWidth="30dp" />
 
-        <TextView
-            android:id="@+id/tv_fragment_person_signature"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/iv_fragment_person_title_bg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/custom_drawable_place_holder" />
+
+            <com.example.commonlibrary.customview.RoundAngleImageView
+                android:id="@+id/riv_fragment_person_avatar"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/custom_drawable_place_holder"
+                android:scaleType="centerCrop"
+                app:roundHeight="30dp"
+                app:roundWidth="30dp" />
+
+            <TextView
+                android:id="@+id/tv_fragment_person_signature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/riv_fragment_person_avatar"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="签名"
+                android:textColor="@color/blue_500"
+                android:textSize="12sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_fragment_person_index"
+
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/riv_fragment_person_avatar"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:background="@color/custom_color_app_content_bg"
+            android:padding="10dp"
+            android:tag="skin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:tag="skin"
+                android:text="个人主页"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/rl_fragment_person_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="签名"
-            android:textColor="@color/blue_500"
-            android:textSize="12sp" />
-    </RelativeLayout>
+            android:background="@color/custom_color_app_content_bg"
+            android:padding="10dp"
+            android:tag="skin">
 
-    <RelativeLayout
-        android:id="@+id/rl_fragment_person_index"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:tag="skin"
+                android:text="个人资料"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@color/custom_color_app_content_bg"
-        android:padding="10dp"
-        android:tag="skin">
 
-        <TextView
-            android:layout_width="wrap_content"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/rl_fragment_person_comment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
-            android:drawablePadding="10dp"
-            android:gravity="center"
-            android:tag="skin"
-            android:text="个人主页"
-            android:textColor="@color/custom_color_text_main"
-            android:textSize="16sp" />
+            android:layout_marginTop="10dp"
+            android:background="@color/custom_color_app_content_bg"
+            android:padding="10dp"
+            android:tag="skin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:tag="skin"
+                android:text="提醒消息"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
 
 
-        <ImageView
-            android:layout_width="wrap_content"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/rl_fragment_person_notify"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+            android:layout_marginTop="10dp"
+            android:background="@color/custom_color_app_content_bg"
+            android:padding="10dp"
+            android:tag="skin">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_fragment_person_system_notify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:tag="skin"
+                android:text="系统通知"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
 
-    <RelativeLayout
-        android:id="@+id/rl_fragment_person_edit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/custom_color_app_content_bg"
-        android:padding="10dp"
-        android:tag="skin">
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_fragment_person_system_notify_count"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/tv_fragment_person_system_notify"
+                android:background="@drawable/custom_drawable_red_point"
+                android:gravity="center"
+                android:text="10"
+                android:textColor="@color/white" />
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/rl_fragment_person_feedback"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
-            android:drawablePadding="10dp"
-            android:gravity="center"
-            android:tag="skin"
-            android:text="个人资料"
-            android:textColor="@color/custom_color_text_main"
-            android:textSize="16sp" />
+            android:layout_marginTop="10dp"
+            android:background="@color/custom_color_app_content_bg"
+            android:padding="10dp"
+            android:tag="skin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:tag="skin"
+                android:text="留言反馈"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
 
 
-        <ImageView
-            android:layout_width="wrap_content"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_fragment_person_settings"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+            android:layout_marginTop="10dp"
+            android:background="@color/custom_color_app_content_bg"
+            android:padding="10dp"
+            android:tag="skin">
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:tag="skin"
+                android:text="设置"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
 
 
-    <RelativeLayout
-        android:id="@+id/rl_fragment_person_comment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/custom_color_app_content_bg"
-        android:padding="10dp"
-        android:tag="skin">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+        </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
+
+        <RelativeLayout
+            android:id="@+id/rl_fragment_person_about"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
-            android:drawablePadding="10dp"
-            android:gravity="center"
-            android:tag="skin"
-            android:text="提醒消息"
-            android:textColor="@color/custom_color_text_main"
-            android:textSize="16sp" />
+            android:layout_marginTop="10dp"
+            android:background="@color/custom_color_app_content_bg"
+            android:padding="10dp"
+            android:tag="skin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:tag="skin"
+                android:text="关于"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
 
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rl_fragment_person_notify"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/custom_color_app_content_bg"
-        android:padding="10dp"
-        android:tag="skin">
-
-        <TextView
-            android:id="@+id/tv_fragment_person_system_notify"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
-            android:drawablePadding="10dp"
-            android:gravity="center"
-            android:tag="skin"
-            android:text="系统通知"
-            android:textColor="@color/custom_color_text_main"
-            android:textSize="16sp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
+        </RelativeLayout>
 
 
-        <TextView
-            android:id="@+id/tv_fragment_person_system_notify_count"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/tv_fragment_person_system_notify"
-            android:background="@drawable/custom_drawable_red_point"
-            android:gravity="center"
-            android:text="10"
-            android:textColor="@color/white" />
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rl_fragment_person_feedback"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/custom_color_app_content_bg"
-        android:padding="10dp"
-        android:tag="skin">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
-            android:drawablePadding="10dp"
-            android:gravity="center"
-            android:tag="skin"
-            android:text="留言反馈"
-            android:textColor="@color/custom_color_text_main"
-            android:textSize="16sp" />
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_fragment_person_settings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/custom_color_app_content_bg"
-        android:padding="10dp"
-        android:tag="skin">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
-            android:drawablePadding="10dp"
-            android:gravity="center"
-            android:tag="skin"
-            android:text="设置"
-            android:textColor="@color/custom_color_text_main"
-            android:textSize="16sp" />
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
-
-    </RelativeLayout>
-
-
-</LinearLayout>
+    </LinearLayout>
+</com.example.commonlibrary.customview.CustomScrollView>
