--- a/news/src/main/res/layout/item_activity_other_new_photo_set.xml
+++ b/news/src/main/res/layout/item_activity_other_new_photo_set.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         />
-    <uk.co.senab.photoview.PhotoView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/pv_item_activity_other_new_photo_set_display"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
