--- a/chat/src/main/res/layout/fragment_person.xml
+++ b/chat/src/main/res/layout/fragment_person.xml
@@ -50,7 +50,6 @@
 
         <RelativeLayout
             android:id="@+id/rl_fragment_person_index"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -61,7 +60,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawableLeft="@drawable/ic_person_home"
                 android:drawablePadding="10dp"
                 android:gravity="center"
                 android:tag="skin"
@@ -123,7 +122,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawableLeft="@drawable/ic_person_remind"
                 android:drawablePadding="10dp"
                 android:gravity="center"
                 android:tag="skin"
@@ -155,7 +154,7 @@
                 android:id="@+id/tv_fragment_person_system_notify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawableLeft="@drawable/ic_person_system_notification"
                 android:drawablePadding="10dp"
                 android:gravity="center"
                 android:tag="skin"
@@ -198,7 +197,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
+                android:drawableLeft="@drawable/ic_person_feckback"
                 android:drawablePadding="10dp"
                 android:gravity="center"
                 android:tag="skin"
@@ -214,6 +213,36 @@
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
 
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/rl_fragment_person_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/custom_color_app_content_bg"
+            android:padding="10dp"
+            android:tag="skin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_person_about"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:tag="skin"
+                android:text="关于"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -246,34 +275,7 @@
         </RelativeLayout>
 
 
-        <RelativeLayout
-            android:id="@+id/rl_fragment_person_about"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/custom_color_app_content_bg"
-            android:padding="10dp"
-            android:tag="skin">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_settings_blue_grey_900_24dp"
-                android:drawablePadding="10dp"
-                android:gravity="center"
-                android:tag="skin"
-                android:text="关于"
-                android:textColor="@color/custom_color_text_main"
-                android:textSize="16sp" />
-
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_keyboard_arrow_right_blue_grey_900_24dp" />
-        </RelativeLayout>
 
 
     </LinearLayout>
