--- a/chat/src/main/res/drawable/btn_login_selector.xml
+++ b/chat/src/main/res/drawable/btn_login_selector.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <solid android:color="@color/blue_500"/>
-
-    <corners android:radius="5dp"/>
-
+    <item
+        android:width="260dp"
+        android:height="64dp" />
+    <solid android:color="@color/blue_500" />
+    <corners android:radius="32dp" />
 </shape>
+
