--- a/chat/src/main/res/layout/fragment_pw_login.xml
+++ b/chat/src/main/res/layout/fragment_pw_login.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/theme_bg_color">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_register_bg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="-50dp"
-        android:layout_marginRight="-300dp"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/de_bg" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:text="密码登录"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="120dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical">
 
         <com.example.commonlibrary.customview.CustomEditText
-            android:id="@+id/aet_register_name"
+            android:id="@+id/cet_login_name"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="20dp"
             android:background="@null"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -38,6 +38,7 @@
             android:textColorHint="#FFFFFF"
             android:textSize="15sp" />
 
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
@@ -45,7 +46,7 @@
             android:background="#E8E8E8" />
 
         <com.example.commonlibrary.customview.CustomEditText
-            android:id="@+id/aet_register_password"
+            android:id="@+id/cet_login_password"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
@@ -60,28 +61,6 @@
             android:textColorHint="#FFFFFF"
             android:textSize="15sp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginTop="11dp"
-            android:background="#E8E8E8" />
-
-        <com.example.commonlibrary.customview.CustomEditText
-            android:id="@+id/aet_register_password_confirm"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="20dp"
-            android:background="@null"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:gravity="bottom"
-            android:hint="@string/register_password_confirm_hint"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            android:textSize="15sp" />
-
 
         <View
             android:layout_width="match_parent"
@@ -90,14 +69,49 @@
             android:background="#E8E8E8" />
 
         <Button
-            android:id="@+id/btn_register_confirm"
+            android:id="@+id/btn_login_confirm"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/btn_login_selector"
             android:gravity="center"
-            android:text="@string/register"
+            android:text="@string/login"
             android:textColor="@color/base_color_text_white"
             android:textSize="18sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_login_forget"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/register_text1"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <TextView
+
+                android:id="@+id/tv_login_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:enabled="true"
+                android:text="@string/register_text2"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+        </LinearLayout>
     </LinearLayout>
+
+
 </RelativeLayout>
